--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
-    <title>FT Six Degrees FE App</title>
+    <title>FT Six Degrees FE App 0.0.2</title>
   </head>
   <body>
     <div id="root"></div>
