--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
-    <title>FT Six Degrees FE App 0.0.2</title>
+    <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^2.1.3,o-header-services@^1.0.0,o-card@^2.2.3,o-buttons@^4.4.1,o-loading@^1.0.0-beta.1" />
+    <title>FT Six Degrees FE App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="root" id="root"></div>
   </body>
 </html>
