--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./src/favicon.ico">
-    <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^2.1.3,o-header@^6.11.1,o-footer@^5.2.0,o-card@^2.2.3,o-buttons@^4.4.1,o-loading@^1.0.0-beta.1,o-grid@^4.2.3,o-typography@^4.3.2" />
+    <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^2.1.3,o-header@^6.11.1,o-footer@^5.2.0,o-card@^2.2.3,o-buttons@^4.4.1,o-loading@^1.0.0-beta.1,o-grid@^4.2.3,o-typography@^4.3.2,o-forms@^3.2.2" />
     <title>FT Six Degrees FE App</title>
   </head>
   <body>
