--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Financial Times Six Degrees" />
     <meta property="og:description" content="Use Six Degree's to figure out who has made the headlines, discover their associations and unearth the stories that connect them" />
     <link rel="shortcut icon" href="./src/favicon.ico">
-    <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^2.1.3,o-header@^6.11.1,o-footer@^5.2.0,o-card@^2.2.3,o-buttons@^4.4.1,o-loading@^1.0.0-beta.1,o-grid@^4.2.3,o-typography@^4.3.2,o-forms@^3.2.2" />
+    <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^2.1.3,o-header@^6.11.1,o-footer@^5.2.0,o-card@^2.2.3,o-buttons@^4.4.1,o-loading@^1.0.0-beta.1,o-grid@^4.2.3,o-typography@^4.3.2,o-forms@^3.2.2,o-icons@^5.0.0" />
     <title>FT Six Degrees</title>
   </head>
   <body>
