--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^2.1.3,o-header@^6.11.1,o-footer@^5.2.0,o-card@^2.2.3,o-buttons@^4.4.1,o-loading@^1.0.0-beta.1,o-grid@^4.2.3,o-typography@^4.3.2,o-forms@^3.2.2,o-icons@^5.0.0,o-tabs@^3.0.0" />
+    <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^2.1.3,o-header@^6.11.1,o-footer@^5.2.0,o-card@^2.2.3,o-buttons@^4.4.1,o-loading@^1.0.0-beta.1,o-grid@^4.2.3,o-typography@^4.3.2,o-forms@^3.2.2,o-icons@^5.0.0,o-tabs@^3.0.0,o-share@^3.0.0" />
     <title>FT Six Degrees</title>
   </head>
   <body>
