--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script src="https://origami-build.ft.com/v2/bundles/js?modules=o-tabs@^3.0.0"></script>
+  <script src="https://origami-build.ft.com/v2/bundles/js?modules=o-tabs@^3.0.0,o-tracking@^1.2.7"></script>
   </body>
 </html>
