--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://build.origami.ft.com/v2/bundles/css?modules=o-fonts@^3.0.3,o-header@^7.2.3,o-footer@^6.0.5,o-card@^3.0.1,o-buttons@^5.7.0,o-colors@^4.1.3,o-loading@^2.1.1,o-grid@^4.3.5,o-typography@^5.3.1,o-forms@^4.1.3,o-icons@^5.4.2,o-normalise@^1.4.2,o-tabs@^4.0.2,o-share@^6.0.0" />
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <title>FT Six Degrees</title>
   </head>
   <body>
