Fix the ugly outline on focus

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <title>FT Six Degrees</title>
   </head>
-  <body>
+  <body class="js-focus-visible">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
